Update Blog “2020-07-15-¿por-o-para”

--- a/_data/blog/2020-07-15-¿por-o-para.md
+++ b/_data/blog/2020-07-15-¿por-o-para.md
@@ -26,3 +26,5 @@ Cuando se utiliza *para*, alguien siempre va a recibir algo.
 > Quiero un coche ***para*** mi cumpleaños.
 
 tkutghug
+
+<div style="text-align: center">gfyirgeyi</div>
