--- a/_data/blog/2020-07-15-¿por-o-para.md
+++ b/_data/blog/2020-07-15-¿por-o-para.md
@@ -13,7 +13,11 @@ Para ayudarte a entender, voy a usar algunos símbolos.
 
 Para *para*, me gustaria que pensaras una flecha - una flecha como en la imagen de abajo.
 
+<div style = "text-align: center">
+
 ![](/assets/images.png)
+
+</div>
 
 Por que una flecha? Suena tonta.
 
@@ -23,8 +27,8 @@ Usted debe utilizar *para* cuando usted quiere hablar de algo que tiene **un des
 
 Cuando se utiliza *para*, alguien siempre va a recibir algo.
 
+<div style = "text-align: center">
+
 > Quiero un coche ***para*** mi cumpleaños.
 
-tkutghug
-
-<div style="text-align: center">gfyirgeyi</div>
+</div>
